--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -119,6 +119,8 @@ pre.literal-block { margin:10px; background:#eee; padding:6px 8px; }
 code strong { color:#930; }
 hr { clear:both; color:#eee; background-color:#eee; height:1px; border:none; margin:0; padding:0; font-size:1px; line-height:1px; }
 
+.hidden { display: none !important; }
+
 /* TEXT STYLES & MODIFIERS */
 .small { font-size:11px; }
 .tiny { font-size:10px; }
