--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -58,7 +58,7 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 
 /* FEEDBACK LIST */
 
-.feedback_item { border:1px solid #dddddd; background: #ddd; }
+.feedback_item { border:1px solid #dddddd; background: #ddd; margin: 5px; }
 .feedback_item > div { text-decoration: none; opacity:1.0; }
 .feedback_item .title { font-weight:bold; }
 .feedback_item img { float: right; }
