--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -182,6 +182,7 @@ div.breadcrumbs { background:white url(../img/admin/nav-bg-reverse.gif) 0 -10px 
 .photo_slideshow .photo_summary { position: absolute; top:10px; right:10px; width:18em; border: 1px solid #ccc; padding: 5px; }
 .photo_slideshow .photo_details_block { display: none; }
 .photo_slideshow .camera_details_block { display: none; }
+.photo_slideshow .paginator { display: none; }
 
 
 .overlapped h2 {
