Fix errors in css file.

--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -72,7 +72,7 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .feedback_list .feedback_item { vertical-align:top; margin:10px; padding:10px; }
 
 /* PAGINATOR */
-.paginator { padding:10px; line-height:22px; margin:0; solid #ddd; }
+.paginator { padding:10px; line-height:22px; margin:0; }
 .paginator a { padding:2px 6px; border:solid 1px #ccc; }
 .paginator a:link, .paginator a:visited { text-decoration:none; }
 .paginator a.showall { padding:0 !important; border:none !important; }
@@ -249,4 +249,4 @@ label { font-weight:normal; color:#666; font-size:12px; }
 .paginator { line-height:42px; }
 .paginator a.relative { display:inline; }
 .paginator a, .paginator span { padding:12px 16px; display:none; }
-
+}
