--- a/spud/static/css/layout.css
+++ b/spud/static/css/layout.css
@@ -7,8 +7,8 @@
 #footer { clear:both; padding:10px; }
 
 /*  COLUMN TYPES  */
-.colMS { margin-right:20em !important; }
-.colSM { margin-left:20em !important; }
+.colMS { margin-right:20em; }
+.colSM { margin-left:20em; }
 .colSM #content-related { float:left; margin-right:0; margin-left:-19em; }
 .colSM #content-main { float:right; }
 .popup .colM { width:95%; }
@@ -27,7 +27,3 @@
 #content-related h3 { font-size:12px; color:#666; margin-bottom:3px; }
 #content-related h4 { font-size:11px; }
 #content-related .module h2 { background:#eee url(../img/admin/nav-bg.gif) bottom left repeat-x; color:#666; }
-
-@media screen and (max-width: 700px) {
-#content { margin:0; }
-}
