Fix display problems.

--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -237,7 +237,7 @@ label { font-weight:normal; color:#666; font-size:12px; }
 
 /* MOBILE */
 @media screen and (max-width: 700px) {
-div#content { margin: 0px; }
+div#content.colSM { margin: 0px; }
 .colSM div#content-main { float: none; margin: 0px; }
 .colSM div#content-related { float: none; margin: 0px; width:100%; }
 #content-related .module { margin: 0px 1px 5px; 1px; }
