--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -15,17 +15,34 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .photo_list .regenerate { background:#CCE; color:#333; }
 .photo_list .ui-selected { background: #F39814; }
 
+.photo_article { border:1px solid #000; margin-bottom: 10px; }
 .photo_article .removed { text-decoration: line-through; opacity:0.5; }
 .photo_article .regenerate { background:#CCE; color:#333; }
 .photo_article .ui-selected { background: #F39814; }
+.photo_article .prevslide { display:block; }
+.photo_article .nextslide { display:block; }
 
+/* SLIDE SHOW */
+.photo_slideshow { position:absolute; left:0; top:0; display:block; }
+.photo_slideshow .photo_image_block { width:100%; height:100%; display:block; background:#000; color:#aaa; margin:0; border:none; }
+.photo_slideshow .photo_summary { position: absolute; top:10px; right:10px; width:18em; border: 1px solid #ccc; padding: 5px; margin:0; background: url('../img/bg-black.png'); }
+.photo_slideshow .photo_details_block { display: none; }
+.photo_slideshow .camera_details_block { display: none; }
 .photo_slideshow .photo.removed { background:#999; color:#333; }
 .photo_slideshow .photo.regenerate { background:#CCE; color:#333; }
 .photo_slideshow .photo.ui-selected { background: #F39814; }
+.photo_slideshow .prevslide { top:50%; display:block; }
+.photo_slideshow .nextslide { top:50%; display:block; }
+
+.overlapped h2 { display:none; }
+.overlapped .main_menu  { display:none; }
+.overlapped .selection_menu  { display:none; }
+.overlapped .menu { background:transparent; border:none; }
+.overlapped .menu .ui-menu-item a { color:#aaa; }
+.overlapped .module { background:transparent; margin:0; }
+.colSM #content-related.overlapped { position:absolute; float:none; margin:0; left:10px; top:10px; display:block; color:#aaa; background:url('../img/bg-black.png'); }
 
 /* PHOTO DETAILS */
-.photo_article { border:1px solid #000; margin-bottom: 10px; }
-
 .photo_block { display:inline-block; vertical-align:top; width:200px; min-height:420px; }
 .photo_block { border:1px solid #ddd; margin:5px; }
 .photo_block .photo_summary { margin: 5px; }
@@ -57,7 +74,6 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .children { border:1px solid #f00; }
 
 /* FEEDBACK LIST */
-
 .feedback_item { border:1px solid #dddddd; background: #ddd; margin: 5px; }
 .feedback_item > div { text-decoration: none; opacity:1.0; }
 .feedback_item .title { font-weight:bold; }
@@ -73,13 +89,18 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 
 /* PAGINATOR */
 .paginator { padding:10px; line-height:22px; margin:0; }
-.paginator a { padding:2px 6px; border:solid 1px #ccc; }
-.paginator a:link, .paginator a:visited { text-decoration:none; }
-.paginator a.showall { padding:0 !important; border:none !important; }
-.paginator a.showall:hover { color:#036 !important; background:transparent !important; }
-.paginator .end { border-width:2px !important; margin-right:6px; }
+.paginator .page { padding:2px 6px; border:solid 1px #ccc; }
+.paginator > .page:last-child { border-width:2px; margin-right:6px; }
+.paginator .page:link, .paginator a:visited { text-decoration:none; }
+.paginator .page:hover { color:white; background:#5b80b2; border-color:#036; }
 .paginator .this-page { padding:2px 6px; font-weight:bold; vertical-align:top; }
-.paginator a:hover { color:white; background:#5b80b2; border-color:#036; }
+
+.prevslide, .nextslide{ display:none; padding:0; border:none; position:absolute; height:43px; width:43px; bottom:0; margin-top:-21px; opacity:0.6; }
+.prevslide{ left:10px; background:url('../img/back.png'); }
+.nextslide{ right:10px; background:url('../img/forward.png'); }
+.prevslide:active, .nextslide:active{ margin-top:-19px; }
+.prevslide:hover, .nextslide:hover{ cursor:pointer; }
+
 
 /* LIST INFO BOX */
 .infobox { border:1px solid #000; padding:10px; margin-bottom:10px; }
@@ -163,67 +184,6 @@ div.system-message p.system-message-title { padding:4px 5px 4px 25px; margin:0; 
 
 /* BREADCRUMBS */
 div.breadcrumbs { background:white url(../img/admin/nav-bg-reverse.gif) 0 -10px repeat-x; padding:2px 8px 3px 8px; color:#999;  border-top:1px solid white; border-bottom:1px solid #ccc; text-align:left; }
-
-/* SLIDE SHOW */
-.photo_slideshow {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: block;
-}
-.photo_slideshow .photo_image_block {
-    width: 100%;
-    height: 100%;
-    display: block;
-    background: #000;
-    color: #aaa;
-    margin: 0;
-    border: none;
-}
-.photo_slideshow .photo_summary { position: absolute; top:10px; right:10px; width:18em; border: 1px solid #ccc; padding: 5px; margin:0; background: url('../img/bg-black.png'); }
-.photo_slideshow .photo_details_block { display: none; }
-.photo_slideshow .camera_details_block { display: none; }
-
-
-.overlapped h2 {
-    display: none;
-}
-
-.overlapped .main_menu  {
-    display: none;
-}
-
-.overlapped .selection_menu  {
-    display: none;
-}
-
-.overlapped .menu { background: transparent; border: none; }
-.overlapped .menu .ui-menu-item a { color: #aaa; }
-
-.colSM #content-related.overlapped {
-    position: absolute;
-    float: none;
-    margin: 0;
-    left: 10px;
-    top: 10px;
-    display: block;
-    color: #aaa;
-    background: url('../img/bg-black.png');
-}
-
-.overlapped .module {
-    background: transparent;
-    margin: 0;
-}
-
-/* ARROWS */
-.paginator .prevslide, .paginator .nextslide { padding:0; border:none; }
-.photo_slideshow .prevslide, .photo_slideshow .nextslide { top:50%; }
-.prevslide, .nextslide{ position:absolute; height:43px; width:43px; bottom:0; margin-top:-21px; opacity:0.6; }
-.prevslide{ left:10px; background:url('../img/back.png'); }
-.nextslide{ right:10px; background:url('../img/forward.png'); }
-.prevslide:active, .nextslide:active{ margin-top:-19px; }
-.prevslide:hover, .nextslide:hover{ cursor:pointer; }
 
 /* FADING */
 .fade{opacity:0;-webkit-transition:opacity 0.15s linear;-moz-transition:opacity 0.15s linear;-o-transition:opacity 0.15s linear;transition:opacity 0.15s linear;}
