--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -70,6 +70,8 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .photo_list .photo_item { display:inline-block; vertical-align:top; height:150px; margin:10px; padding-top:10px; text-align: center; width:170px; }
 .photo_list .photo_item .desc { float:left; display:none; }
 .photo_list .photo_item:HOVER .desc { display:inline; background:#ddd; color:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
+#photo_list .prevslide { display:block; }
+#photo_list .nextslide { display:block; }
 
 .children { border:1px solid #f00; }
 
