--- a/spud/static/css/global.css
+++ b/spud/static/css/global.css
@@ -23,17 +23,17 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .photo_article .nextslide { display:block; }
 
 /* SLIDE SHOW */
-.photo_slideshow { display:block; }
-.photo_slideshow .photo_image_block { width:100%; height:100%; display:block; background:#000; color:#aaa; margin:0; border:none; }
-.photo_slideshow .photo_summary { position: absolute; top:10px; right:10px; width:18em; border: 1px solid #ccc; padding: 5px; margin:0; background: url('../img/bg-black.png'); }
-.photo_slideshow .photo_details_block { display: none; }
-.photo_slideshow .camera_details_block { display: none; }
-.photo_slideshow .photo.removed { background:#999; color:#333; }
-.photo_slideshow .photo.regenerate { background:#CCE; color:#333; }
-.photo_slideshow .photo.ui-selected { background: #F39814; }
-.photo_slideshow .prevslide { top:50%; display:block; }
-.photo_slideshow .nextslide { top:50%; display:block; }
-.photo_slideshow .paginator .page { display:none; }
+.slideshow .photo_article { display:block; }
+.slideshow .photo_article .photo_image_block { width:100%; height:100%; display:block; background:#000; color:#aaa; margin:0; border:none; }
+.slideshow .photo_article .photo_summary { position: absolute; top:10px; right:10px; width:18em; border: 1px solid #ccc; padding: 5px; margin:0; background: url('../img/bg-black.png'); }
+.slideshow .photo_article .photo_details_block { display: none; }
+.slideshow .photo_article .camera_details_block { display: none; }
+.slideshow .photo_article .photo.removed { background:#999; color:#333; }
+.slideshow .photo_article .photo.regenerate { background:#CCE; color:#333; }
+.slideshow .photo_article .photo.ui-selected { background: #F39814; }
+.slideshow .photo_article .prevslide { top:50%; display:block; }
+.slideshow .photo_article .nextslide { top:50%; display:block; }
+.slideshow .photo_article .paginator .page { display:none; }
 
 #header.slideshow { display:none; }
 .breadcrumbs.slideshow { display:none; }
