--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}{{ title }}{% endblock %}
-{% block breadcrumbs %}<div class="breadcrumbs">No breadcrumbs</div>{% endblock %}
+{% block breadcrumbs %}<div id="breadcrumbs">No breadcrumbs</div>{% endblock %}
 
 {% block usertools %}
 <div id="user-tools"></div>
