--- a/spud/templates/500.html
+++ b/spud/templates/500.html
@@ -2,7 +2,12 @@
 {% load i18n %}
 
 {% block title %}{% trans 'Server error (500)' %}{% endblock %}
-{% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url root %}">{% trans "Home" %}</a> &rsaquo; {% trans "Server error" %}</div>{% endblock %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+    <a href="{% url 'root' %}">{% trans "Home" %}</a> &rsaquo; {% trans "Server error" %}
+</div>
+{% endblock %}
 
 {% block content %}
 <h1>{% trans 'Server Error <em>(500)</em>' %}</h1>
