--- a/spud/static/css/base.css
+++ b/spud/static/css/base.css
@@ -1,14 +1,215 @@
-/*
-    DJANGO Admin
-    by Wilson Miner wilson@lawrence.com
-*/
+body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif; color:#333; background:#fff; }
 
-/* Block IE 5 */
-@import "null.css?\"\{";
+/*  HEADER  */
+#header { background:#417690; color:#ffc; overflow:hidden; }
+#header a:link, #header a:visited { color:white; }
+#header a:hover { text-decoration:underline; }
+#branding h1 { padding:0 10px; font-size:18px; margin:8px 0; font-weight:normal; color:#f4f379; }
+#branding h2 { padding:0 10px; font-size:14px; margin:-8px 0 8px 0; font-weight:normal; color:#ffc; }
+#user-tools { position:absolute; top:0; right:0; padding:1.2em 10px; font-size:11px; text-align:right; }
 
-/* Import other styles */
-@import url('global.css');
-@import url('layout.css');
+/* MENU */
+#menu .ui-menu {
+    border: 0;
+}
 
-/* Import patch for IE 6 Windows */
-/*\*/ @import "patch-iewin.css"; /**/
+#menu .ui-menu .ui-menu-item {
+    display: inline-block;
+    margin: 0;
+    padding: 0 10px 10 0 10px;
+}
+
+/* AUTO COMPLETE */
+.ui-autocomplete-input { width:99%; }
+.ui-autocomplete { overflow-x:hidden; overflow-y:auto; max-height:500px; max-width:340px; }
+.ui-autocomplete.ui-front { z-index: 200; }
+
+/* PHOTO STATUS */
+.photo_list .removed { text-decoration: line-through; opacity:0.5; }
+.photo_list .regenerate { background:#CCE; color:#333; }
+.photo_list .ui-selected { background: #F39814; }
+
+.photo_article { border:1px solid #000; margin-bottom: 10px; }
+.photo_article .removed { text-decoration: line-through; opacity:0.5; }
+.photo_article .regenerate { background:#CCE; color:#333; }
+.photo_article .ui-selected { background: #F39814; }
+.photo_article .prevslide { display:block; }
+.photo_article .nextslide { display:block; }
+
+/* SLIDE SHOW */
+.slideshow .photo_article { display:block; margin:0; border:none; }
+.slideshow .photo_article .photo_image_block { width:100%; height:100%; display:block; background:#000; color:#aaa; margin:0; border:none; }
+.slideshow .photo_article .photo_summary { position: absolute; top:10px; right:10px; width:18em; border: 1px solid #ccc; padding: 5px; margin:0; background: url('../img/bg-black.png'); }
+.slideshow .photo_article .photo_details_block { display: none; }
+.slideshow .photo_article .camera_details_block { display: none; }
+.slideshow .photo_article .photo.removed { background:#999; color:#333; }
+.slideshow .photo_article .photo.regenerate { background:#CCE; color:#333; }
+.slideshow .photo_article .photo.ui-selected { background: #F39814; }
+.slideshow .photo_article .paginator { width:0; height:0; padding:0; margin:0; }
+.slideshow .photo_article .paginator .prevslide { top:50%; display:block; }
+.slideshow .photo_article .paginator .nextslide { top:50%; display:block; }
+.slideshow .photo_article .paginator .page { display:none; }
+.slideshow .photo_article .paginator .this-page { display:none; }
+.slideshow .photo_article .paginator .dots { display:none; }
+
+#header.slideshow { display:none; }
+#footer.slideshow { display:none; }
+#breadcrumbs.slideshow { display:none; }
+#content.slideshow.colSM { margin:0; }
+#content.slideshow.colSM #content-main { float:none; }
+#content.slideshow.colSM #content-main h1 { display:none; }
+#content.slideshow.colSM #content-related { float: none; margin: 0; position: absolute; top:10px; left:10px;  color:#aaa; background:url('../img/bg-black.png'); }
+.slideshow #content-related h2 { display:none; }
+
+/* PHOTO DETAILS */
+.photo_block { display:inline-block; vertical-align:top; width:200px; min-height:420px; }
+.photo_block { border:1px solid #ddd; margin:5px; }
+.photo_block .photo_summary { margin: 5px; }
+.photo_block h2 { margin: 5px; }
+.photo_block ul  { padding-left: 20px; }
+.photo_block label { display:block; font-weight:bold; margin-top:4px; }
+.photo_block input[type="text"] { width:192px; }
+.photo_block textarea { width:192px; }
+.photo_block select { width:100%; }
+
+.photo_image_block { width:auto; }
+.photo_image_block .title { font-weight:bold; }
+
+/* PHOTO LIST */
+.photo_item { border:1px solid #dddddd; }
+.photo_item:HOVER { border:1px solid #000; }
+.photo_item .title { font-weight:bold; }
+.photo_item.ui-selecting { background: #FECA40; }
+.photo_item .desc { text-align: left; }
+.photo_item .desc ul { text-align: left; }
+.photo_item .desc ol { text-align: left; }
+
+.photo_list { border:1px solid #333; margin-bottom: 10px; height: 400px; overflow-y: scroll; }
+.photo_list > ul { padding:0; }
+.photo_list .photo_item { display:inline-block; vertical-align:top; height:170px; margin:10px; padding-top:10px; text-align: center; width:140px; }
+.photo_list .photo_item .desc { float:left; display:none; }
+.photo_list .photo_item:HOVER .desc { display:inline; background:#ddd; color:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
+#photo_list .prevslide { display:block; }
+#photo_list .nextslide { display:block; }
+
+.children { border:1px solid #f00; }
+
+/* FEEDBACK LIST */
+.feedback_item { border:1px solid #dddddd; background: #ddd; margin: 5px; }
+.feedback_item > div { text-decoration: none; opacity:1.0; }
+.feedback_item .title { font-weight:bold; }
+.feedback_item img { float: right; }
+.feedback_item.public > div { background:#fff; }
+.feedback_item.public { background:#fff; }
+.feedback_item.removed > div { text-decoration: line-through; opacity:0.5; }
+
+.feedback_list { border:1px solid #333; margin-bottom: 10px; }
+.feedback_list .feedback_ul { padding: 0; }
+.feedback_list .feedback_ul > li { list-style-type: none; }
+.feedback_list .feedback_item { vertical-align:top; margin:10px; padding:10px; }
+
+/* PAGINATOR */
+.paginator { padding:10px; line-height:22px; margin:0; }
+.paginator .page { padding:2px 6px; border:solid 1px #ccc; }
+.paginator > .page:last-child { border-width:2px; margin-right:6px; }
+.paginator .page:link, .paginator a:visited { text-decoration:none; }
+.paginator .page:hover { color:white; background:#5b80b2; border-color:#036; }
+.paginator .this-page { padding:2px 6px; font-weight:bold; vertical-align:top; }
+
+.prevslide, .nextslide{ display:none; padding:0; border:none; position:absolute; height:43px; width:43px; bottom:0; margin-top:-21px; opacity:0.6; }
+.prevslide{ left:10px; background:url('../img/back.png'); }
+.nextslide{ right:10px; background:url('../img/forward.png'); }
+.prevslide:active, .nextslide:active{ margin-top:-19px; }
+.prevslide:hover, .nextslide:hover{ cursor:pointer; }
+
+
+/* LIST INFO BOX */
+.infobox { border:1px solid #000; padding:10px; margin-bottom:10px; }
+.infobox .image { display:inline-block; }
+.infobox .def_list { max-width:500px; display: inline-block; vertical-align:top; margin-left: 5px; }
+.infobox .def_list .item { border-top:1px solid #ddd; margin-bottom: 5px; }
+.infobox .def_list .term { margin:0; padding:5px; background:#ddd; color:#333; text-align:right; font-weight:bold; position:absolute; width:100px; vertical-align: top; }
+.infobox .def_list .definition { margin-left:110px; padding:5px; display:inline-block; vertical-align:top;}
+
+/* PHOTO INFO BOX */
+.photo_block .def_list .item { margin-bottom: 10px; }
+.photo_block .def_list .term { background: #ddd; color: #333; text-align: left; font-weight: bold; padding: 5px; }
+.photo_block .def_list .definition { padding: 5px; }
+
+/* LINKS */
+a:link, a:visited { color: #5b80b2; text-decoration:none; }
+a:hover { color: #036; }
+a img { border:none; }
+a.section:link, a.section:visited { color: white; text-decoration:none; }
+
+/* GLOBAL DEFAULTS */
+p, ol, ul, dl { margin:.2em 0 .8em 0; }
+
+h1,h2,h3,h4,h5 { font-weight:bold; }
+h1 { font-size:180%; color:#666; padding:0 6px 0 0; margin:0 0 .2em 0; }
+h2 { font-size:160%; margin:1em 0 .5em 0; }
+h2.subhead { font-weight:normal;margin-top:0; }
+h3 { font-size:140%; margin:.8em 0 .3em 0; color:#666; font-weight:bold; }
+h4 { font-size:120%; margin:1em 0 .8em 0; padding-bottom:3px; }
+h5 { font-size:100%; margin:1.5em 0 .5em 0; color:#666; text-transform:uppercase; letter-spacing:1px; }
+
+form { margin:0; padding:0; }
+fieldset { margin:0; padding:0; }
+
+blockquote { color:#777; margin-left:2px; padding-left:10px; border-left:5px solid #ddd; }
+code, pre { font-family:"Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace; background:inherit; color:#666; }
+pre.literal-block { margin:10px; background:#eee; padding:6px 8px; }
+code strong { color:#930; }
+hr { clear:both; color:#eee; background-color:#eee; height:1px; border:none; margin:0; padding:0; font-size:1px; line-height:1px; }
+
+.hidden { display: none !important; }
+
+/* TEXT STYLES & MODIFIERS */
+.small { font-size:11px; }
+.tiny { font-size:10px; }
+p.tiny { margin-top:-2px; }
+.mini { font-size:9px; }
+p.mini { margin-top:-3px; }
+.help, p.help { color:#999; }
+p img, h1 img, h2 img, h3 img, h4 img, td img { vertical-align:middle; }
+.quiet, a.quiet:link, a.quiet:visited { color:#999 !important;font-weight:normal !important; }
+.quiet strong { font-weight:bold !important; }
+.float-right { float:right; }
+.float-left { float:left; }
+.clear { clear:both; }
+.align-left { text-align:left; }
+.align-right { text-align:right; }
+.example { margin:10px 0; padding:5px 10px; background:#efefef; }
+.nowrap { white-space:nowrap; }
+
+/* MESSAGES & ERRORS */
+ul.messagelist { padding:0 0 5px 0; margin:0; }
+ul.messagelist li { display:block; padding:4px 5px 4px 25px; margin:0 0 3px 0; border-bottom:1px solid #ddd; color:#666; background:#ffc url(../img/admin/icon_success.gif) 5px .3em no-repeat; }
+.errornote { display:block; padding:4px 5px 4px 25px; margin:0 0 3px 0; border:1px solid red; color:red;background:#ffc url(../img/admin/icon_error.gif) 5px .3em no-repeat; }
+ul.errorlist { margin:0 !important; padding:0 !important; }
+.errorlist li { display:block; padding:4px 5px 4px 25px; margin:0 0 3px 0; border:1px solid red; color:white; background:red url(../img/admin/icon_alert.gif) 5px .3em no-repeat; }
+td ul.errorlist { margin:0 !important; padding:0 !important; }
+td ul.errorlist li { margin:0 !important; }
+.errors { background:#ffc; }
+.errors input, .errors select { border:1px solid red; }
+div.system-message { background: #ffc; margin: 10px; padding: 6px 8px; }
+div.system-message p.system-message-title { padding:4px 5px 4px 25px; margin:0; color:red; background:#ffc url(../img/admin/icon_error.gif) 5px .3em no-repeat; }
+.description { padding:5px 0 0 12px; }
+
+/* BREADCRUMBS */
+div#breadcrumbs { background:white url(../img/admin/nav-bg-reverse.gif) 0 -10px repeat-x; padding:2px 8px 3px 8px; color:#999;  border-top:1px solid white; border-bottom:1px solid #ccc; text-align:left; }
+
+/* FADING */
+.fade{opacity:0;-webkit-transition:opacity 0.15s linear;-moz-transition:opacity 0.15s linear;-o-transition:opacity 0.15s linear;transition:opacity 0.15s linear;}
+.fade.in{opacity:1;}
+
+/* FORMS */
+label { font-weight:normal; color:#666; font-size:12px; }
+.required label, label.required { font-weight:bold; color:#333; }
+
+/* OTHER */
+.loading * { visibility: hidden; }
+
+/* MOBILE */
+@media screen and (max-width: 700px) {
+}
